--- a/about us.html
+++ b/about us.html
@@ -9,14 +9,14 @@
   <header>
     <h1>Lelly's Best Pharmacy</h1>
     <nav>
-      <a href="about.html">About</a>
+      <a href="about us.html">About us</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
 
-  <section class="about">
-    <h2>About</h2>
+  <section class="about us">
+    <h2>About us</h2>
     <p>At Lelly's Best Pharmacy, we are dedicated to providing high-quality medicines, wellness products, and professional advice to our community. We are proudly located in Qacha's Nek BEDCO Room 7, opposite the taxi rank.</p>
   </section>
 
