--- a/about us.html
+++ b/about us.html
@@ -9,7 +9,7 @@
   <header>
     <h1>Lelly's Best Pharmacy</h1>
     <nav>
-      <a href="about us.html">About us</a>
+      <a href="about.html">About us</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
     </nav>
