--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Welcome to Lelly's Best Pharmacy</h1>
     <nav>
       <a href="#index.html">Home</a>
-      <a href="about.html">About Us</a>
+      <a href="about us.html">About Us</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
     </nav>
@@ -23,7 +23,7 @@
   </section>
 
   <section class="home-buttons" style="text-align:center; margin: 30px 0;">
-    <a class="btn" href="about.html">Learn More About Us</a>
+    <a class="btn" href="about us.html">Learn More About Us</a>
     <a class="btn" href="services.html">View Our Services</a>
     <a class="btn" href="contact.html">Contact Us</a>
   </section>
