--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <header>
     <h1>Welcome to Lelly's Best Pharmacy</h1>
     <nav>
-      <a href="#index.html">Home</a>
-      <a href="about us.html">About Us</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About Us</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
     </nav>
