--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
   <section class="services">
     <h2>Our Services</h2>
     <div class="service">
-      <img src="https://via.placeholder.com/300x200?text=Prescription+Drugs" alt="Prescription Drugs">
+      <img src="1750342109368.jpg" alt="Prescription Drugs">
       <h3>Prescription Drugs</h3>
       <p>Reliable and affordable medicines for all your health needs.</p>
     </div>
