--- a/services.html
+++ b/services.html
@@ -23,7 +23,7 @@
       <p>Reliable and affordable medicines for all your health needs.</p>
     </div>
     <div class="service">
-      <img src="https://via.placeholder.com/300x200?text=Health+Supplements" alt="Health Supplements">
+      <img src="1750342130756.jpg"alt="Health Supplements">
       <h3>Health Supplements</h3>
       <p>Vitamins and supplements to boost your well-being.</p>
     </div>
