--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
       <p>Vitamins and supplements to boost your well-being.</p>
     </div>
     <div class="service">
-      <img src="https://via.placeholder.com/300x200?text=Consultation" alt="Consultation">
+      <img src="1750343293012.jpg" alt="Consultation">
       <h3>Consultation Services</h3>
       <p>Get expert advice from qualified professionals.</p>
     </div>
