--- a/about.html
+++ b/about.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title> About Us- Lelly's Best Pharmacy</title>
+    <link rel="stylesheet" href="about us.css">
+  </head>
 <section  id="about">
   <h2>about us</h2>
 
