--- a/about.html
+++ b/about.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title> About Us- Lelly's Best Pharmacy</title>
-    <link rel="stylesheet" href="about us.css">
-  </head>
-<section  id="about">
-  <h2>about us</h2>
+<head>
+  <meta charset="UTF-8">
+  <title>About Us - Lelly's Best Pharmacy</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Lelly's Best Pharmacy</h1>
+    <nav>
+      <a href="about.html">About Us</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
+  <section class="about">
+    <h2>About Us</h2>
+    <p>At Lelly's Best Pharmacy, we are dedicated to providing high-quality medicines, wellness products, and professional advice to our community. We are proudly located in Qacha's Nek BEDCO Room 7, opposite the taxi rank.</p>
+  </section>
 
-
-
-  <p>at Lelly's Best Pharmacy we believe that everyone deserves to get best from us because we are the best in the world,our services are best and we provide some best medicine and best treatment all the time</p>
-
-<p>with us you'll get what you ordered </p>
-
-  <p>
-    THANK YOU FOR YOUR SUPPORT AND YOU ARE ALL APPRECIATED
-</section>
+  <footer>
+    <p>Contact us: 58518040 / 63126667 | Email: lellysbestphamarcy@gmail.com</p>
+  </footer>
+</body>
+</html>
