--- a/services.html
+++ b/services.html
@@ -32,6 +32,21 @@
       <h3>Consultation Services</h3>
       <p>Get expert advice from qualified professionals.</p>
     </div>
+    <div class="services">
+      <img src=""alt flue and pain relieve">
+      <h3>Dry&wet cough</h3>
+      <p>your life illness matters</p>
+    </div>
+    <div class="services">
+      <img src=""alt HIV testing and counselling">
+      <h3>HIV&AIDS test</h3>
+      <p>all counselling for HIV&AIDS and medication</p>
+    </div>
+    <div class="services">
+      <img src=""alt Blood sugar checks">
+      <h3>know your status with us</h3>
+      <p>Good health starts here</p>
+    </div>
   </section>
 
   <footer>
