--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
       <p>Get expert advice from qualified professionals.</p>
     </div>
     <div class="services">
-      <img src=""alt flue and pain relieve">
+      <img src="1751360265566.jpg" alt="flue and pain relieve">
       <h3>Dry&wet cough</h3>
       <p>your life illness matters</p>
     </div>
