--- a/services.html
+++ b/services.html
@@ -38,7 +38,7 @@
       <p>your life illness matters</p>
     </div>
     <div class="services">
-      <img src=""alt HIV testing and counselling">
+      <img src="1751360474844.jpg" alt="HIV testing and counselling">
       <h3>HIV&AIDS test</h3>
       <p>all counselling for HIV&AIDS and medication</p>
     </div>
