--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@
       <p>all counselling for HIV&AIDS and medication</p>
     </div>
     <div class="services">
-      <img src=""alt Blood sugar checks">
+      <img src="1751360535669.jpg" alt="Blood sugar checks">
       <h3>know your status with us</h3>
       <p>Good health starts here</p>
     </div>
