--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
     <p>Lelly's Best Pharmacy provides reliable healthcare solutions, including prescription medication, supplements, and expert consultations. We are conveniently located at BEDCO Room 7, opposite the taxi rank.</p>
     <p>Explore our services and get in touch with us for all your health and wellness needs.</p>
   </section>
-
-  <section class="home-buttons" style="text-align:center; margin: 30px 0;">
+  
+  <section class="photo logo">
+    <h2>pharmacy</h2>
+    <img src="" alt="<Lelly's Best Pharmacy>
+      </pharmacy>
+      </section>
+      </main>
+      
+      <section class="home-buttons" style="text-align:center; margin: 30px 0;">
     <a class="btn" href="about us.html">Learn More About Us</a>
     <a class="btn" href="services.html">View Our Services</a>
     <a class="btn" href="contact.html">Contact Us</a>
