--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
   <section class="photo logo">
     <h2>pharmacy</h2>
-    <img src="" alt="<Lelly's Best Pharmacy>
+    <img src="1751360230965~2.jpg" alt="<Lelly's Best Pharmacy>
       </pharmacy>
       </section>
       </main>
